# MIST

./: CMakeLists.txt  InstructionsInstallingCLapack.md  README.md  build-CLAPACK.sh
cmake/: FindCLAPACK.cmake
demo/: CMakeLists.txt  demo.cpp
mist/: environment.h  machine_learning.h  matrix.h  mist.h
mist/filter/: decomposition.h  fusion.h  labeling.h
mist/io/: dicom_info.h  jpeg.h  raw.h  wav.h
notebook/: empty.html
test/: CMakeLists.txt  Makefile  array_test.cpp  binary_test.cpp  callback_test.cpp  color_test.cpp  crc_test.cpp  decimal_test.cpp  environment_test.cpp  fft_test.cpp  hash_test.cpp  image_test.cpp  image_test_window.cpp  integer_test.cpp  iterator_test.cpp  limits_test.cpp  margin_array_test.cpp  matrix_test.cpp  matrix_util_test.cpp  matrix_util_test2.cpp  memory_test.cpp  minimization_test.cpp  mixture_test.cpp  operators_test.cpp  pointer_test.cpp  quaternion_test.cpp  random_test.cpp  region_growing_test.cpp  set_test.cpp  singleton_test.cpp  thread_test.cpp  type_test.cpp
unittest/: CMakeLists.txt  main.cpp  matrix.cpp
