# Look for header files
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

# Set the source files
SET(DEMO_SRC demo.cpp)

SET_SOURCE_FILES_PROPERTIES(${DEMO_SRC} PROPERTIES LANGUAGE CXX)
SET(CMAKE_CXX_FLAGS "-Wall -W -O2")

ADD_EXECUTABLE(demo ${DEMO_SRC})

TARGET_LINK_LIBRARIES (demo ${LIBS} ${IMGLIBS})

